--- a/practice1/practice.html
+++ b/practice1/practice.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-	<title> Hello!</title>
+    <title> Hello!</title>
+    <style>
+        h1{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
 	<h3> this is a heading </h3>
-    <p> my name is leily</p>
+    <p> my name is Leili</p>
     <h4>
         this heading is smaller
     </h4>
-	<p> let's try to pull using vsCode </p>
-	
 </body>
