--- a/practice1/practice.html
+++ b/practice1/practice.html
@@ -12,6 +12,6 @@
 	<h3> this is a heading </h3>
     <p> my name is Leili</p>
     <h4>
-        this heading is smaller
+        this is just a practice to get used to using git 
     </h4>
 </body>
